--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,4 @@
+/* giris sayfa */
 body{
     background-color: rgb(234, 239, 239);
 }
@@ -11,7 +12,7 @@ body{
     border-radius: 10px;
 }
 
-h1{
+.title {
     font-size: 50px;
     color: #43597d;
     margin-left: 10px;
@@ -67,4 +68,102 @@ h1{
     font-size: 20px;
     color: #2b3240;
 }
+
+/* packets page */
+
+.packets-title {
+    font-size: 50px;
+    color: #43597d;
+    margin-left: 10px;
+    border-bottom: 1px solid #43597d;
+    position: relative;
+}
+.packets-title::after{
+    content: '';
+    position: absolute;
+    left: 0; 
+    bottom: -1px; 
+    width: 100%; 
+    height: 1px; 
+    background-color: rgba(0, 0, 0, 0.2); 
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3); 
+}
+  
+
+.form-container{
+    margin: 10px;
+    margin-bottom: 20px;
+}
+.srcdest-ip {
+    font-size: 20px;
+    color: #2b3240;
+}
+.options-container-lbl{
+    font-size: 20px;
+    color: #2b3240;
+    
+}
+.filter-label-srcdest{
+    border-radius: 10px;
+    color: #2b3240;
+    outline: none;
+    border: none;
+    padding: 5px;
+}
+.filter-label-srcdest:hover{
+    transform: scale(1.05);
+    transition: ease 0.3s;
+    cursor: pointer;
+}
+.options-container{
+    border-radius: 10px;
+    padding: 5px;
+}
+.filter-btn {
+    margin-left: 5px;
+    padding: 8px;
+    padding-left: 18px;
+    padding-right: 18px;
+    border: none;
+    outline: none;
+    border-radius: 10px;
+    background-color: #de7456;
+    color:aliceblue;
+}
+.filter-btn:hover{
+    transform: scale(1.05);
+    transition: ease 0.3s;
+    cursor: pointer;
+    background-color: #e25832;
+}
+
+.table-container {
+    width: 100%;
+}
+.table-td{
+    text-align: center;
+    padding: 10px;
+    border: 1px solid #2b3240c0;
+    border-radius: 10px;
+    color: #43597d;
+}
+.table-td:hover{
+    transform: scale(1.05);
+    transition: ease 0.3s;
+    background-color: #43597d;
+    color: #a0c0d6;
+    
+}
+.header-tbl {
+    text-align: center;
+    height: 30px;
+    border: 1px solid #2b3240c0;
+    border-radius: 10px;
+}
+.header-tbl:hover{
+    transform: scale(1.05);
+    transition: ease 0.3s;
+    background-color: #4f545e65;
+}
+
 
