--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='style.css') }}"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
         <h1 class="title">Packet Sniffer</h1>
         <p class="nav-item">CENG 304/314 Final Project</p>
         <p class="nav-item">Made By İlayda Nihan Toku</p>
-        <button class="nav-item-btn">Contact Me</button>
+        <a href="https://github.com/ilaydaxtx" class="nav-item-btn" target="_blank">Contact Me</a>
         
     </div>
     <div class="button">
